--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
